--- a/src/components/ui/button/buttons.module.scss
+++ b/src/components/ui/button/buttons.module.scss
@@ -1,4 +1,3 @@
-@use '@gear-js/ui/mixins' as *;
 @use 'utils' as *;
 
 .base {
@@ -37,20 +36,19 @@ a.base[aria-disabled="true"] {
   border: 2px solid var(--btn-border-color);
   background-color: var(--btn-bg-color);
   @include gap(10px, right);
+  letter-spacing: 0.03em;
 }
 
 .md {
-  padding: 10px 32px;
+  padding: 10px 30px;
   font-size: 18px;
   line-height: 26px;
-  letter-spacing: 0.54px;
 }
 
 .sm {
-  padding: 8px 16px;
+  padding: 8px 14px;
   font-size: 16px;
   line-height: 20px;
-  letter-spacing: 0.48px;
 }
 
 .primary {
